--- a/_posts/2025-05-14-first.md
+++ b/_posts/2025-05-14-first.md
@@ -8,3 +8,5 @@ title: "첫 포스팅 입니다."
 앞으로 열심히 해보겠습니다.
 
 ![image-20250517102620375](C:\gitblog\lbakim.github.io\images\2025-05-14-first\image-20250517102620375.png)
+
+**실시간으로 반영이 된다고??**
